--- a/index.html
+++ b/index.html
@@ -1,193 +1,235 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/common/reset.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="CSS/common/reset.css" />
-    <link rel="stylesheet" href="CSS/style_1.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <title>도시락으로 다 통한다, 해외 데이터는 도시락통</title>
   </head>
   <body>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">ABOUT US</a>
-      <a href="#">제휴문의</a>
-      <a href="#">도시락멤버스</a>
-      <a href="#">와이파이도시락</a>
-      <a href="#">도시락유심</a>
-      <a href="#">도시락eSIM</a>
-    </div>
-    <header id="header">
-      <h1>
-        <a href=""><img class="changeImg" src="img/logoWhite.png" alt="" /></a>
-      </h1>
-      <nav>
-        <ul>
-          <li><a href="">ABOUT US</a></li>
-          <li><a href="">제휴문의</a></li>
-          <li><a href="">도시락멤버스</a></li>
-          <li><a href="">와이파이도시락</a></li>
-          <li><a href="">도시락유심</a></li>
-          <li><a href="">도시락eSIM</a></li>
-        </ul>
-      </nav>
-      <div class="nav_btn">
-        <i onclick="openNav()" class="fa-solid fa-bars fa-2x"></i>
+    <!--header 시작-->
+    <div class="bgimg">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide bg1"></div>
+          <div class="swiper-slide bg2"></div>
+          <div class="swiper-slide bg3"></div>
+        </div>
       </div>
-    </header>
+      <header id="h_wrap">
+        <div class="header_LOGO">
+          <a href="index.html"></a>
+        </div>
+        <div class="header_gnb">
+          <ul>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">제휴문의</a></li>
+            <li><a href="#">도시락멤버스</a></li>
+            <li><a href="#">와이파이도시락</a></li>
+            <li><a href="#">도시락유심</a></li>
+            <li><a href="#">도시락eSIM</a></li>
+          </ul>
+        </div>
+        <div class="nav_button">
+          <a href="#">
+            <i class="fa-solid fa-bars fa-2x"></i>
+          </a>
+        </div>
+      </header>
+      <div class="header_main">
+        <div class="header_main_con">
+          <ul>
+            <li>
+              <h1>도시락 유심</h1>
+            </li>
+            <li>믿을 수 있는 현지 통산사의 선불유심, 유심도 도시락으로!</li>
+          </ul>
+          <div class="more_arrow">
+            <a href="#">
+              <article>
+                <h5>자세히 보기</h5>
+              </article>
+              <article><img src="img/arrow-right.png" alt="" /></article>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--container 시작-->
     <main>
-      <section class="section1">
-        <div class="slide_wrap swiper mySwiper">
-          <div class="slide swiper-wrapper">
-            <div class="swiper-slide img-first">
-              <div class="swiper-inner">
-                <div class="arrows">
-                  <div class="left swiper-button-prev">&lt;</div>
-                  <div class="right swiper-button-next">&gt;</div>
-                </div>
-                <div class="slide_text">
-                  <h2>도시락통</h2>
-                  <p>믿을 수 있는 현지 통신사의 선불유심, 유심도 도시락으로!</p>
-                  <div class="btn_more"><span>자세히보기</span><i class="fa-solid fa-arrow-right-long"></i></div>
-                </div>
+      <section id="service">
+        <h2><span class="blue_txt">도시락통</span>서비스 둘러보기</h2>
+        <article>
+          <a href="">
+            <div class="serv_big">
+              <img src="img/main_service_img1.jpg" alt="img1" />
+              <div class="serv_txt">
+                <h3>와이파이도시락</h3>
+                <p>최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!</p>
+                <div>바로가기<span>&gt;</span></div>
               </div>
             </div>
-            <div class="swiper-slide img-second">
-              <div class="swiper-inner">
-                <div class="arrows">
-                  <div class="left swiper-button-prev">&lt;</div>
-                  <div class="right swiper-button-next">&gt;</div>
+          </a>
+          <div class="serv_small">
+            <div>
+              <a href="">
+                <img src="img/main_service_img2.jpg" alt="img1" />
+                <div class="serv_txt">
+                  <h3>와이파이도시락</h3>
+                  <p>최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!</p>
+                  <div>바로가기<span>&gt;</span></div>
                 </div>
-                <div class="slide_text">
-                  <h2>와이파이도시락</h2>
-                  <p>여럿이 함께 쓰는 대용량 데이터, 장거리, 장기 할인은 기본</p>
-                  <div class="btn_more"><span>자세히보기</span><i class="fa-solid fa-arrow-right-long"></i></div>
-                </div>
-              </div>
+              </a>
             </div>
-            <div class="swiper-slide img-third">
-              <div class="swiper-inner">
-                <div class="arrows">
-                  <div class="left swiper-button-prev">&lt;</div>
-                  <div class="right swiper-button-next">&gt;</div>
+
+            <div>
+              <a href="">
+                <img src="img/main_service_img3.jpg" alt="img1" />
+                <div class="serv_txt">
+                  <h3>와이파이도시락</h3>
+                  <p>최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!</p>
+                  <div>바로가기<span>&gt;</span></div>
                 </div>
-                <div class="slide_text">
-                  <h2>도시락유심</h2>
-                  <p>믿을 수 있는 현지 통신사의 선불유심, 유심도 도시락으로!</p>
-                  <div class="btn_more"><span>자세히보기</span><i class="fa-solid fa-arrow-right-long"></i></div>
-                </div>
-              </div>
+              </a>
             </div>
-            <div class="swiper-slide img-fourth">
-              <div class="swiper-inner">
-                <div class="arrows">
-                  <div class="left swiper-button-prev">&lt;</div>
-                  <div class="right swiper-button-next">&gt;</div>
-                </div>
-                <div class="slide_text">
-                  <h2>도시락eSIM</h2>
-                  <p>요금제, 통신사 변경 없이 데이터 충전가능한 아이폰유저를 위한 가장 간편한 로밍</p>
-                  <div class="btn_more"><span>자세히보기</span><i class="fa-solid fa-arrow-right-long"></i></div>
-                </div>
-              </div>
+          </div>
+        </article>
+      </section>
+
+      <section class="section2">
+        <div class="section2_wrap">
+          <aside>
+            <h2>통신 서비스를 하나로</h2>
+            <h3>해외여행 갈 땐 <span>도시락통.</span></h3>
+          </aside>
+          <div class="section2_right">
+            <div class="section2_right_top">
+              <h4>혼자서 갑자기 훌쩍 떠나는 여행도</h4>
+              <h4>오랜만에 온 가족이 함께하는 여행도</h4>
+              <h4><span>도시락 하나면 든든</span>해요.</h4>
             </div>
-            <div class="swiper-slide img-fiveth">
-              <div class="swiper-inner">
-                <div class="arrows">
-                  <div class="left swiper-button-prev">&lt;</div>
-                  <div class="right swiper-button-next">&gt;</div>
-                </div>
-                <div class="slide_text">
-                  <h2>2023 EVENT</h2>
-                  <p>잘 가시도 2022! 어서 오시락 2023!!</p>
-                  <div class="btn_more"><span>자세히보기</span><i class="fa-solid fa-arrow-right-long"></i></div>
-                </div>
+            <div class="section2_right_middle">
+              <p>국내외 어디서나 끊김없이 든든한 네트워크 제공하자는 모토를 가지고 2004년,</p>
+              <p>(주)와이드모바일은 설립되었습니다.</p>
+            </div>
+            <div class="section2_right_bottom">
+              <p>더 나은 서비스 제공을 위해 지속적으로 연구, 개발하여 앞으로도 편리하고 즐거운 여행의 파트너가 되겠습니다.</p>
+            </div>
+            <div class="section2_right_bottom_aboutUS">
+              <a href="#">
+                <p>ABOUT US</p>
+                <img src="img/right_black.png" alt="right_black" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--section3-->
+      <section class="section3">
+        <div class="section3_wrap">
+          <div class="swiper section3__swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <article class="section3_left hover">
+                  <a href="#">
+                    <h1>도시락멤버스</h1>
+                    <div class="maintext">
+                      <p>하나의 ID로 도시락통의 모든 서비스를</p>
+                      <p>이용할 수 있는 통합멤버십</p>
+                      <p>이용 할 수록 커지는 혜택을 확인해보세요</p>
+                    </div>
+                    <div class="read_more">
+                      <p>READ MORE</p>
+                      <article></article>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="swiper-slide">
+                <article class="section3_middle hover">
+                  <a href="#">
+                    <h1>도시락톡</h1>
+                    <div class="maintext">
+                      <p>로밍전화 요금 부담을 확 낮춰주는</p>
+                      <p>해외로밍전화 앱 서비스</p>
+                      <p>도시락톡끼리는 365일 무료통화 혜택까지!</p>
+                    </div>
+                    <div class="read_more">
+                      <p>READ MORE</p>
+                      <article></article>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="swiper-slide">
+                <article class="section3_right hover">
+                  <a href="#">
+                    <h1>여행보험도시락</h1>
+                    <div class="maintext">
+                      <p>방문국가, 나이 입력하고 보험료 미리보기</p>
+                      <p>커피 두 세잔 값으로 보험료는 가볍게,</p>
+                      <p>보장은 든든하게!</p>
+                    </div>
+                    <div class="read_more">
+                      <p>READ MORE</p>
+                      <article></article>
+                    </div>
+                  </a>
+                </article>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section id="service">
-        <h2><span class="blue_txt">도시락통</span>서비스 둘러보기</h2>
-        <article>
-          <div class="sev_a">
-            <img src="img/main_service_img1.jpg" />
-            <div class="sev_txt">
-              <h3>와이파이도시락</h3>
-              <p>최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!</p>
-              <div>바로가기<span> > </span></div>
-            </div>
-          </div>
-          <div class="sev_b">
-            <div>
-              <img src="img/main_service_img2.jpg" />
-              <div class="sev_txt">
-                <h3>도시락유심</h3>
-                <p>별도 단말기 소지 없이 유심 교체로 간편한 해외 데이터 사용</p>
-                <div>바로가기<span> > </span></div>
-              </div>
-            </div>
-            <div>
-              <img src="img/main_service_img3.jpg" />
-              <div class="sev_txt">
-                <h3>도시락eUSIM</h3>
-                <p>해외 데이터 사용 손쉽게 구매부터 QR설치까지 온라인으로 끝!</p>
-                <div>바로가기<span> > </span></div>
-              </div>
-            </div>
-          </div>
-        </article>
-      </section>
-      <section id="about">
-        <h2>통신 서비스를 하나로 <br />해외여행 갈 땐 <span class="blue_txt">도시락통.</span></h2>
-        <article>
-          <h3>혼자서 갑자기 훌쩍 떠나는 여행도</h3>
-          <br />오랜만에 온 가족이 함께하는 여행도 <br /><span class="blue_txt">도시락 하나면 든든</span>해요.
-          <div>
-            <p>국내외 어디서나 끊김없이 든든한 네트워크 제공하자는 모토를 가지고 2004년, (주)와이드모바일은 설립되었습니다.</p>
-            <p>더 나은 서비스 제공을 위해 지속적으로 연구, 개발하여 앞으로도 편리하고 즐거운 여행의 파트너가 되겠습니다.</p>
-          </div>
-          <div class="about_btn">
-            ABOUT US
-            <span>→</span>
-          </div>
-        </article>
-      </section>
-      <section id="banner">
-        <article class="members">
-          <h3>도시락멤버스</h3>
-          <p>하나의 ID로 도시락통의 모든 서비스를 <br />이용할 수 있는 통합멤버십. <br />이용 할 수록 커지는 커지는 혜택을 확인해보세요!</p>
-          <div class="bnr_btn">READ MORE</div>
-        </article>
-        <article class="talk">
-          <h3>도시락톡</h3>
-          <p>로밍전화 요금 부담을 확 낮춰주는 <br />해외로밍전화 앱 서비스. <br />도시락톡끼리는 365일 무료통화 혜택까지!</p>
-          <div class="bnr_btn">READ MORE</div>
-        </article>
-        <article class="insu">
-          <h3>여행보험도시락</h3>
-          <p>방문국가, 나이 입력하고 보험료 미리보기 <br />커피 두 세잔 값으로 보험료는 가볍게, <br />보장은 든든하게!</p>
-          <div class="bnr_btn">READ MORE</div>
-        </article>
-      </section>
     </main>
+    <!--footer 시작-->
     <footer>
-      <div>
-        <ul>
-          <li>상호 : ㈜와이드모바일</li>
-          <li>대표 : 김만중</li>
-          <li>통신판매업신고번호 : 제2018-서울서대문-0301호</li>
-          <li>사업자등록번호 : 121-81-66458</li>
-        </ul>
-        <div class="f_cs">고객센터 : 1566-9070 (운영시간 9:00~18:00, 주말/공휴일/점심 12:00~13:00 제외)</div>
-        <p>Copyright © WIDEMOBILE INC. Allright Reserved.</p>
+      <div class="inr_footer">
+        <div class="footer_con">
+          <ul>
+            <li>
+              <p>상호 : (주 와이드모바일)</p>
+            </li>
+            <li><p>대표 : 김만중</p></li>
+            <li><p>통신판매업신고번호 : 제2018-서울서대문-0301호</p></li>
+            <li><p>사업자등록번호 : 121-81-66458</p></li>
+          </ul>
+          <p>고객센터 : 1566-9070 (운영시간 9:00~18:00, 주말/공휴일/점심 12:00~13:00 제외)</p>
+          <p class="copy">Copyright © WIDEMOBILE INC. Allright Reserved.</p>
+        </div>
       </div>
     </footer>
-    <script src="https://kit.fontawesome.com/1af51f8c7f.js" crossorigin="anonymous"></script>
-    <script src="js/header.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="js/swiper.js"></script>
   </body>
 </html>
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+<script>
+  var swiper = new Swiper('.mySwiper', {
+    slidesPerView: 1,
+    loop: true,
+    pagination: {
+      el: '.swiper-pagination',
+      clickable: true,
+    },
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+  });
+</script>
+<script src="js/index.js"></script>
+<script src="https://kit.fontawesome.com/1af51f8c7f.js" crossorigin="anonymous"></script>
+<script>
+  var swiper = new Swiper('.section3__swiper', {
+    slidesPerView: 1,
+    freeMode: true,
+    pagination: {
+      el: '.swiper-pagination',
+      clickable: true,
+    },
+  });
+</script>
